--- a/README.org
+++ b/README.org
@@ -1,6 +1,7 @@
 * cliente
 ** componentes
 *** fazer um componente de popup
+stub está feito
 ** eslint
 ** home
 *** botao like nas quotes
@@ -14,14 +15,26 @@
 ** escrita
 *** fazer o render de um popup com as instruções da instância atual do exercício
 * mvp
+* layout responsivo
+** escrita
+*** colocar pra receber informações da página trilha
+*** montar popup com o enunciado do exercício
+** signup
+*** adicionar google
+*** adicionar discord
+** login
+*** adicionar google
+*** adicionar discord
 ** public index
 *** trocar o logo do react
 ** home 
 *** créditos do livro
+*** componente da citação está com proporção da foto bugada conforme a largura da página muda
 *** arrumar uma citação boa sobre escrita e adicionar elas na api
 *** no máximo 20 palavras no texto do hero
 ** trilhas
-*** montar o botão começar
+*** redirect pra página do escrita
+
 id exercicio
 fetch id exercise pra api
 pego a resposta do server
@@ -29,5 +42,7 @@ mostro um div com as informações na descrição
 fecho o popup qdo tiver um clique
 redireciono pro escrita
 ** escrita
-*** montar um popup que renderiza a atividade da API servidor
+*** TODO montar um popup que renderiza a atividade da API servidor
+é o que eu estou fazendo agora, acabei de adicionar o stub do componente do popup
+falta fazer a lógica no backend e fazer a request da api
 
